--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "bootstrap": "^4.0.0",
     "less": "^3.0.1",
-    "nord": "^0.2.1",
-    "npm": "^5.7.1"
+    "nord": "^0.2.1"
   }
 }
